# detect_one

./: .gitignore  CMakeLists.txt  README.md
include/: bmwfilter.hpp  filter.hpp  histogram.hpp  sample.hpp
lib/: CMakeLists.txt  bmwfilter.cpp  histogram.cpp  sample.cpp
src/: CMakeLists.txt
src/detect/: CMakeLists.txt  detect.cpp  imgdetect.cpp
src/detect_train/: CMakeLists.txt  a.out  convert.py  equalizehist.cpp  fillpos.cpp  sample.cpp  sample.hpp
